--- a/main.html
+++ b/main.html
@@ -9,12 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
  <nav>
-<a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TcwMU02T1JgNGB0YPBiS8_PT89JBQBASQXT&q=google&rlz=1C1CHBD_enIN910IN910&oq=g&aqs=chrome.2.69i59j69i57j46i131i199i433i465i512j0i131i433i512j69i60l4.2373j0j7&sourceid=chrome&ie=UTF-8">Home</a>
-<a href="https://www.youtube.com/">About us</a>
-<a href="https://www.instagram.com/">Contact us</a>
-<h5>
-   3 random audios
-</h5>
+   <ul>
+ <li><a href="https://www.google.com/search?gs_ssp=eJzj4tTP1TcwMU02T1JgNGB0YPBiS8_PT89JBQBASQXT&q=google&rlz=1C1CHBD_enIN910IN910&oq=g&aqs=chrome.2.69i59j69i57j46i131i199i433i465i512j0i131i433i512j69i60l4.2373j0j7&sourceid=chrome&ie=UTF-8">Home</a></li>
+<li><a href="https://www.youtube.com/">About us</a></li>
+<li><a href="https://www.instagram.com/">Contact us</a></li>
+
+</ul>
+<h5>3 random audios</h5>
+
 <audio controls>
    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
 </audio>
